Wed Apr 13 09:39:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Time_Value_Test.cpp:
        * tests/Bug_2434_Regression_Test.cpp:
          Overflow problem is part of bugzilla 2434, only do the test there,
          that way Time_Value_Test should run in all builds

        * tests/ACE_Test.cpp:
        * tests/Bug_3758_Regression_Test.cpp:
        * tests/Date_Time_Test.cpp:
          Layout changes

Wed Apr 13 07:41:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Time_Value.inl:
          Removed truncate_cast because it gives problems on Windows. Thanks
          to Jonathan Saxton <jsaxton at appsecinc dot com>

        * tests/Time_Value_Test.cpp:
          Extended with new test for change above

Tue Apr 12 20:39:11 UTC 2011  Olli Savia  <ops@iki.fi>

        * NEWS:
          Added a note about rand_r() and getpwnam_r() changes.

Tue Apr 12 18:51:21 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Bug_3943_Regression_Test.cpp:

          More scoreboard cleanup.

Mon Apr 11 17:21:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          Another try to fix qnx 6.3

Mon Apr 11 06:30:07 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Added support for no-optimize-sibling-calls

Sun Apr 10 18:04:19 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          Don't define _QNX_SOURCE, already defined by default

Sun Apr 10 17:32:22 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          qnx63 has much less than qnx65

Sun Apr 10 17:03:49 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          Made some fixes for qnx65

        * include/makeinclude/platform_qnx_gcc.GNU:
          Simplified

Sun Apr 10 14:58:13 UTC 2011  Phil Mesnier  <mesnier_p@ociwb.com>

        * tests/run_test.lst: